# White

./: README.md  REALME.md
23-5/mcu1/: sdkconfig
23-5/mcu1/Lib/: ADS1115.h  DS3231.h  GPS.h  LCD.h  UART.h  decode_png.h  i2cdev.h  myDO.h  nvs_interface.h
23-5/mcu1/main/: ADS1115.c  CMakeLists.txt  DS3231.c  GPS.c  LCD.c  SDCard.c  UART.c  decode_png.c  main.c  myTemp.c  mypH.c  nvs_interface.c  pngle.c
gate/Lib/: LCD.h  decode_png.h  ili9486.h  lcd_com.h  lcd_lib.h
gate/lcd_id/: ili9341.txt  ili9386.txt
gate/main/: 8080_lcd_esp32s3.c  CMakeLists.txt  LCD.c  decode_png.c  fontx.c  i2s_lcd_esp32_driver.c  ili9341.c  ili9486.c  lcd_com.c  lcd_lib.c  main.c  pngle.c
mcu1/: sdkconfig  sdkconfig.old
mcu1/Lib/: SDCard.h  UartComunication.h  datamanager.h  ili9340.h  myDO.h  myEC.h  myTemp.h  mypH.h
mcu1/main/: CMakeLists.txt  GPS.c  LCD.c  UartComunication.c  datamanager.c  fontx.c  i2cdev.c  ili9340.c  main.c  myDO.c  myEC.c  mypH.c
